Aplicando BS e Modal

--- a/Scamboo/css/style.css
+++ b/Scamboo/css/style.css
@@ -1,411 +1,31 @@
-﻿@charset 'UTF-8';
-*{
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-/*-------------------------------------------------------------------------*/
-					/* DEFAULT ADIMIN */
-body{									/* CORPO */
-	background: url(img/bk.png)fixed repeat-x;
-	background-color: #110472;
-	font-family: Tahoma, Arial, Verdana;
-	font-size: 1em;
-}
-@media screen and (max-width: 599px){
-
-}/*MEDIA MAX CELULAR 599PX*/
-@media screen and (min-width: 600px){
-#corpo{
-	width: 100%;
-	margin: 0 auto;
-}
-#h1{
-	background: rgba(255, 255, 255, 0.8);
-	border: 4px;
-	width: 100%;
-}
-/*h1{
-	width: 50%;
-	float: left;
-	padding-left: 3.5em;
-	text-align:center;
-}*/
-#h1 a{
-	float: right;
-	color: #FFF;
-	text-decoration: none;
-	text-shadow: 1px 1px 1px #000, 
-	-1px -1px 1px #000, 
-	-1px 1px 1px #000, 
-	1px -1px 1px #000;
-	border-radius: 0 0 1em 1em;
-	padding: 0.5em 1em;
-	background: rgba(255, 255, 255, 0.8);
-	border: 4px;
-}
-#h1 a:hover{
-	color: #FFF;
-	text-shadow: 1px 1px 1px #D30000, 
-	-1px -1px 1px #D30000, 
-	-1px 1px 1px #D30000, 
-	1px -1px 1px #D30000;
-}
-#logo{						/* CABEÇALHO */
-	width: 25%;
-	margin-left: 5%;
-}
-#logo img{ width: 50%; float: left; }
-/*-------------------------------------------------------------------------*/
-							/* MENU */
-#nav{
-	background: rgba(255, 255, 255, 0.8);
-	width: 60%;
-	float: left;
-	border: 1px solid #000;
-	box-shadow: 0.1em 0.2em 0.4em #000;
-	margin-top: 2%;
-	margin-left: 2%;
-}
-#menucenter{
-	width: 60%;
-	margin: 0 auto;
-}
-#nav ul{
-	width: 100%;
-	float: left;
-	text-align: center;
-	padding-left: 13em;
-}
-#nav ul  li{
-	float: left;
-	list-style: none;
-	display: inline-block;
-}
-#nav ul li a{
-	float: left;
-	color: #FFF;
-	text-decoration: none;
-	text-shadow: 1px 1px 1px #000, 
-	-1px -1px 1px #000, 
-	-1px 1px 1px #000, 
-	1px -1px 1px #000;
-	padding: 0.5em 1em;
-}
-#nav ul li a:hover{
-	color: #FFF;
-	text-shadow: 1px 1px 1px #D30000, 
-	-1px -1px 1px #D30000, 
-	-1px 1px 1px #D30000, 
-	1px -1px 1px #D30000;
-}
-#nav ul li ul{
-  float: left;
-  display: none;
-  position: absolute;
-  width: 10%;
-  padding: 0;
-  margin: 0;
-  margin-top: 2.2em;
-  background: rgba(255,255,255, 0.50);
+﻿/* Remove the navbar's default margin-bottom and rounded borders */ 
+.navbar {
+	margin-bottom: 0;
+	border-radius: 0;
+  }
   
-}
-#nav ul li:hover ul{
-  display: block;
-}
-#nav ul li ul li, #nav ul li ul li a{
-  float: left;
-  width: 100%;
-}
-/*-------------------------------------------------------------------------*/
-#middle{							/* CONTEUDO */
-	width: 60%;
-	padding: 0 0 2em 0;
-	margin-left: 1.7em;
-	border: 1px solid #000;
-	float: left;
-	background: rgba(255, 255, 255, 0.8);
-	margin-top: 1.5%;
-	box-shadow: 0.1em 0.2em 0.4em #000;
-}
-#footer{
-	width: 100%;
-	float: left;
-	text-align: center;
-	padding: 1em 0 1.2em 0;
-	margin: 1% 0 1.2% 0;
-	color: #000;
-	background: rgba (0, 0, 0, 0.8);
-	border: 1px solid #000;
-	box-shadow: 0.1em 0.2em 0.4em #000;
-	background: rgba(255, 255, 255, 0.8);
-}
-}/* MEDIA 600PX*/
-
-/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-								/* INDEX */
-#index {
-
-}
-/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-								/* CONSULTA CLIENTES */
-
-h3{
-	text-align:center;
-}
-#imgcon img{
-	float: right;
-	margin: 0 30% 0 0;
-}
-#boxcon{
-	padding: 1em 1em 1em 1em;
-
-}
-#boxcon p{
-	background: rgba(0, 0, 0, 0.7);
-	color: #FFF;
-	margin: 0 0 0 22%;
-	width: 50%;
-	padding: 1em 1em 1em 1em;
-	border: 1px solid #000;
-	border-radius: 0 0 2em 2em;
-}
-#boxcon a{
-	padding-left: 5em;
-	color: #FFF;
-	text-decoration: none;
-	text-shadow: 1px 1px 1px #000, 
-	-1px -1px 1px #000, 
-	-1px 1px 1px #000, 
-	1px -1px 1px #000;
-}
-#boxcon a:hover{
-	color: #FFF;
-	text-shadow: 1px 1px 1px #D30000, 
-	-1px -1px 1px #D30000, 
-	-1px 1px 1px #D30000, 
-	1px -1px 1px #D30000;
-}
-									/*BUCAR CLIENTES*/
-									
-#srcCon{
-	Float:right;
-	padding-right: 24em;
-
-}
-
-/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-	/*FORMCAD*/
-#fieldcad{
-	width: 25%;
-	margin: 3% auto 0 auto;
-	text-align: justify;
-	border: 1px solid #000;
-	border-radius: 1.5em;
-	box-shadow: 2px 2px 3px #000;
-background: #b0c4b8; /* Old browsers */
-background: -moz-linear-gradient(top,  #b0c4b8 0%, #848484 50%, #000000 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0c4b8), color-stop(50%,#848484), color-stop(100%,#000000)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #b0c4b8 0%,#848484 50%,#000000 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #b0c4b8 0%,#848484 50%,#000000 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #b0c4b8 0%,#848484 50%,#000000 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #b0c4b8 0%,#848484 50%,#000000 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0c4b8', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-}
-#fieldcad legend{
-	margin: 0 0 0 4%;
-	padding: 0.5em;
-	border: 1px solid #000;
-	border-radius: 2em;
-background: #fcdede; /* Old browsers */
-background: -moz-linear-gradient(top,  #fcdede 0%, #ff8282 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcdede), color-stop(100%,#ff8282)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #fcdede 0%,#ff8282 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #fcdede 0%,#ff8282 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #fcdede 0%,#ff8282 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #fcdede 0%,#ff8282 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcdede', endColorstr='#ff8282',GradientType=0 ); /* IE6-9 */
-}
-/*#linha{
-	width: 90%;
-	margin: 5%;
-}
-#linha span{
-	width: 100%;
-	float: left;
-}*/
-
-/*#linha label{
-	width: 50%;
-	float: left;
-	border: 1px solid #000;
-}*/
-
-/*#linha #coluna1{
-	width: 35%;
-	float: left;
-	text-align: left;
-}
-#linha #coluna2{
-	width: 60%;
-	float: left;
-	margin: 0 0 0 1%;
-}*/
-#fieldcad span{
-	width: 90%;
-	float: left;
-}
-#fieldcad *{
-	margin: 0 5% 0 5%;
-	padding: 0.2em;
-}
-#fieldcad input[type="text"],
-#fieldcad input[type="password"],
-#fieldcad input[type="email"]{
-	width: 90%;
-	float: left;
-}
-#btnsub{
-	width: 50%;
-	margin: 0 auto;
-}
-#btnsub input[type="submit"]{
-	width:100%;
-	margin: 5% 0 10% 0;
-	float: left;
-}
-/*-------------------------------------------------------------------------*/
-#idlogin{
-	width: 30%;
-	margin: 2% auto;
-	text-align: center;
-	padding: 2em 0;
-	line-height:1.6em;
-	background: rgba(111,200,55,0.8);
-	border-radius: 1em;
-	border: 1px solid #009;
-}
-#idlogin legend{
-	margin: 0 2%;
-	padding: 1em;
-	background: rgba(100,200,55,0.8);
-	border-radius: 2em;
-	border: 1px solid #009;
-}
-#idlogin *{}
-/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-							/*FORMULARIO*/
-#Arqprod{
-	background: rgba(200,20,20,0.5);
-	text-align: center;
-}
-#fieldcad{
-	width: 55%;
-	margin: 1% auto 3% auto;
-	border: 1px solid #000;
-	border-radius: 1.5em;
-	box-shadow: 2px 2px 3px #000;
-background: rgb(238,238,238); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(238,238,238,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(100%,rgba(238,238,238,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
-
-}
-#fieldcad input[id='cpf'], 
-#fieldcad input[id='cep'], 
-#fieldcad input[type='tel']{
-	width:35%;
-}
-#fieldcad #fieldcadEst select{
-	float:left;
-	margin:0;
-}
-#fieldcad #fieldcadEst label[for='idestado']{
-	float:left;
-	margin:0 0 0 5%;
-}
-#fieldcad #fieldcadEst label[for='idcep']{
-	float:left;
-	margin:0 0 0 0;
-}
-#fieldcad #fieldcadEst input[id='cep']{
-	margin:0 0 0 1%;
-}
-#fieldcad legend{
-	margin: 0 0 0 4%;
-	padding: 0.5em;
-	border: 0px solid #000;
-	border-radius: 2em;
-background: #FFF;
-}
-#fieldcad select{
-	border-radius: 2em;
-}
-#fieldcad textarea{
-	resize: none;
-}
-#fieldcad #fieldcadacess{
-	border: 1px solid #000;
-	border-radius: 1em;
-background: rgb(125,126,125); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(125,126,125,1) 0%, rgba(14,14,14,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,126,125,1)), color-stop(100%,rgba(14,14,14,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
-
-}
-#fieldcad #fieldcadacess legend{
-	margin: 0 0 0 4%;
-	padding: 0.5em;
-	border: 0 solid #000;
-	border-radius: 1em;
-	color: #FFF;
-	background: #000;
-}
-#btnsub{
-	width: 50%;
-	margin: 0 auto;
-}
-#btnsub input[type="submit"]{
-	width:100%;
-	margin: 5% 0 10% 0;
-	float: left;
-	color: #FFF;
-	background: rgba(0,0,0, 0.80);
-	
-}
-#btnsub{
-	float: left;
-	width: 30%;
-	margin: 0 auto;
-}
-#btnsub input[type="submit"]{
-	width:100%;
-	margin: 5% 5% 10% 30%;
-	float: left;
-	color: #FFF;
-	background: rgba(0,0,0, 0.80);
-	
-}
-#btnres{
-	width: 30%;
-	margin: 0 auto;
-}
-#btnres input[type="reset"]{
-	width:100%;
-	margin: 5% 5% 10% 85%;
-	float: left;
-	color: #FFF;
-	background: rgba(0,0,0, 0.80);
-	
-}
-/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+  /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+  .row.content {height: 450px}
+  
+  /* Set gray background color and 100% height */
+  .sidenav {
+	padding-top: 20px;
+	background-color: #f1f1f1;
+	height: 100%;
+  }
+  
+  /* Set black background color, white text and some padding */
+  footer {
+	background-color: #555;
+	color: white;
+	padding: 15px;
+  }
+  
+  /* On small screens, set height to 'auto' for sidenav and grid */
+  @media screen and (max-width: 767px) {
+	.sidenav {
+	  height: auto;
+	  padding: 15px;
+	}
+	.row.content {height:auto;} 
+  }
