--- a/Scamboo/css/style.css
+++ b/Scamboo/css/style.css
@@ -139,6 +139,20 @@ footer {
     padding: 30px 10px 0 0;
     /* width: 125px; */
 }
+.scb-prod-col-3-1{
+    float: left;
+    /* height: 102px; */
+    overflow: hidden;
+    padding: 0 10px 0 0;
+    /* width: 125px; */
+}
+.scb-prod-col-3-2{
+    float: left;
+    /* height: 102px; */
+    overflow: hidden;
+    padding: 0 10px 0 0;
+    /* width: 125px; */
+}
 .scb-prod-col-3 button{
     float: left;
     margin: 0 5px 5px;
