--- a/Scamboo/css/style.css
+++ b/Scamboo/css/style.css
@@ -87,7 +87,7 @@ footer {
     overflow: hidden;
     /* padding: 10px 10px 10px 0; */
     position: relative;
-    width: 380px;
+    width: 170px;
 }
 .scb-prod-col-2-title{
     overflow: hidden;
@@ -107,13 +107,13 @@ footer {
     width: 142px;
 }
 .scb-prod-image-box{
-    background: #fff;
+    background: #555;
     border-right: 1px solid #ccc;
     color: #666;
     display: table-cell;
     height: 102px;
     overflow: hidden;
-    /* text-align: center; */
+    text-align: center;
     vertical-align: middle;
     width: 135px;
 }
@@ -136,9 +136,18 @@ footer {
     float: left;
     /* height: 102px; */
     overflow: hidden;
-    padding: 30px 10px 0 0;
+    padding: 30px 10px 0 150px;
     /* width: 125px; */
 }
+
+.scb-prod-col-3-0{
+    float: left;
+    /* height: 102px; */
+    overflow: hidden;
+    padding: 0 10px 0 0;
+    /* width: 125px; */
+}
+
 .scb-prod-col-3-1{
     float: left;
     /* height: 102px; */
@@ -166,4 +175,7 @@ footer {
     padding: 10px 10px 0 0;
     width: 100px;
     margin-bottom: 5px !important;
+}
+.row{
+    padding: 0 0 0 100px;
 }
